| Summary: | ASTERISK-26362: res_config_mysql: Broken after 13.10 | ||
| Reporter: | Carlos Chavez (cchavezp) | Labels: | |
| Date Opened: | 2016-09-12 17:02:37 | Date Closed: | 2016-10-14 11:50:51 |
| Priority: | Minor | Regression? | Yes |
| Status: | Closed/Complete | Components: | Addons/res_config_mysql |
| Versions: | 13.10.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | We may have broken res_config_mysql with recent alembic changes
http://lists.digium.com/pipermail/asterisk-users/2016-September/289927.html | ||
| Comments: | |||